添加部分单元测试

--- a/.gitignore
+++ b/.gitignore
@@ -473,3 +473,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/python,node,visualstudiocode,jetbrains,macos,windows,linux
+
+tmp
