--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,11 @@ ruff = "^0.4.2"
 nonebot2 = { extras = ["httpx"], version = "^2.3.0" }
 pyyaml = "^6.0.1"
 
+
+[tool.poetry.group.test.dependencies]
+nonebug = "^0.3.7"
+pytest-asyncio = "^0.23.6"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
