--- a/codegen/api.yml
+++ b/codegen/api.yml
@@ -221,6 +221,13 @@ setAppInfo:
       - fieldValue
       - str
   - ''
+getMessage:
+  - chat.message.getMessage
+  - MessageRet
+  - messageId:
+      - messageId
+      - str
+  - 获取消息
 addConverse:
   - user.dmlist.addConverse
   - - null
