--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,4 +8,9 @@ updates:
   - package-ecosystem: "github-actions" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
+      interval: "weekly"
+
+  - package-ecosystem: "pip" # See documentation for possible values
+    directory: "/" # Location of package manifests
+    schedule:
       interval: "daily"
